# smt-decomp

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  diff_settings.py  notes.md
config/: slps_031.70.ld  slps_031.70.yaml  smt1.data.ld  smt1.data.yaml  smt1.ld  smt1.main.ld  smt1.main.yaml  smt1.yaml  symbol_addrs.txt  symbols.smt1.main.txt  symbols.txt  undefined_funcs_auto.smt1.data.txt  undefined_funcs_auto.smt1.main.txt  undefined_funcs_auto.txt  undefined_syms_auto.smt1.data.txt  undefined_syms_auto.smt1.main.txt  undefined_syms_auto.txt
docs/: info.md  slps_031.70.md  smt1.tbl
game/: PLACE GAME FILES HERE.txt
include/: char_enc.h  common.h  dat.h  dungeon.h  field.h  graph.h  main.h  object.h  pad.h  skill.h  sound.h  ui.h  unk.h  unk6.h
include/lib/: asm.h  kernel.h  libds.h  libgpu.h  libgte.h
source/: SLPS_031.70.h  align.h  armor.h  border.h  chara.h  com.h  flag.h  global.h  input.h  inputh.c  inputh.h  main.c  main.h  psyq470.h  stats.h
src/smt1/: 366E0.c  common.h  dat.c  dat.h  dungeon.c  dungeon.h  field.c  field.h  graph.c  graph.h  intro.c  main.c  main.elf  main.h  misc.h  object.c  object.h  pad.c  pad.h  unk.c  unk.h
src/smt1/data/: 366E0.c  intro.c  ovr0.c  ovr1.c  ovr2.c  ovr3.c  ovr4.c
src/smt1/main/: comment_example.c  dat.c  dgraph.c  dungeon.c  dunk.c  field.c  graph.c  main.c  misc.h  movie.c  movie.h  object.c  overlay.c  pad.c  sound.c  unk.c  unk3.c  unk3.h  unk4.c  unk4.h  unk6.c
src/smt1/main/dungeon/: dgraph.c  dmap.c  dmap.h  dungeon.c  dungeon_other.c  dunk1.c  dunk2.c
src/smt1/main/graph/: dbox.c  graph.c  grid_bg.c  overlay.c  unk.c
src/smt1/main/lib/: libcd.c  libds.c  libsnd.c  libspu.c
src/smt1/main/unk/: field.c  memcard.c  skill.c  unk6.c
